# heimdal-packages

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PROGRESS.md  README.md
.github/: BRANCH_PROTECTION.md  SETUP_PROTECTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  package_request.md
.github/workflows/: ci.yml  release.yml
dependencies/: containers.yaml  editors.yaml  languages.yaml
docs/: ARCHITECTURE.md
examples/: README.md  full-package.yaml  minimal-package.yaml  package-group.yaml  profile.yaml
groups/: devops.yaml  go-dev.yaml  minimal.yaml  python-dev.yaml  rust-dev.yaml  terminal-power-user.yaml  web-dev.yaml
mappings/: containers.yaml  core.yaml  editors.yaml  languages.yaml  terminals.yaml
profiles/: backend.yaml  developer.yaml  devops.yaml  frontend.yaml  minimal.yaml
schemas/: dependency.schema.json  group.schema.json  mapping.schema.json  package.schema.json  profile.schema.json  suggestion.schema.json  template.schema.json
scripts/: compile.rs  stats.rs  validate.rs
suggestions/: containers.yaml  editors.yaml  infrastructure.yaml  languages.yaml
templates/: linux-server.yaml  macos-developer.yaml
tests/: integration_test.rs  schema_test.rs  validation_test.rs
tests/fixtures/: invalid_package.yaml  valid_package.yaml
