[package]
name = "heimdal-packages"
version = "1.0.0"
edition = "2021"
authors = ["Aleem Isiaka"]
description = "Community-maintained package database for Heimdal"
license = "MIT"
repository = "https://github.com/limistah/heimdal-packages"

[[bin]]
name = "compile"
path = "scripts/compile.rs"

[[bin]]
name = "validate"
path = "scripts/validate.rs"

[[bin]]
name = "stats"
path = "scripts/stats.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# File system
walkdir = "2.5"
glob = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# Validation
jsonschema = "0.17"

[dev-dependencies]
tempfile = "3.8"
